[gd_scene load_steps=10 format=3 uid="uid://86x4xt5k0bsu"]

[ext_resource type="Script" path="res://map_editor_screen.gd" id="1_88hck"]
[ext_resource type="Script" path="res://grid_container.gd" id="2_ktsdv"]
[ext_resource type="FontFile" uid="uid://dvjpeiguvrck1" path="res://BLACKCASTLEMF.TTF" id="3_f76qc"]
[ext_resource type="Texture2D" uid="uid://bxurxurdtxxo4" path="res://Condoterri - ATLAS TEXTURE - map tiles.png" id="4_nmiis"]
[ext_resource type="Script" path="res://tile.gd" id="5_m2pae"]
[ext_resource type="Script" path="res://divider_script.gd" id="6_ua3h0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vtgug"]
atlas = ExtResource("4_nmiis")
region = Rect2(3, 3, 94, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pobu"]
atlas = ExtResource("4_nmiis")
region = Rect2(250, 221, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w23fb"]
atlas = ExtResource("4_nmiis")
region = Rect2(0, 336, 94, 94)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_88hck")

[node name="SaveMapPopup" type="Window" parent="."]
title = "Save Map"
position = Vector2i(215, 306)
size = Vector2i(365, 100)
visible = false

[node name="MarginContainer" type="MarginContainer" parent="SaveMapPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SaveMapPopup/MarginContainer"]
layout_mode = 2

[node name="MapNameInput" type="LineEdit" parent="SaveMapPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type map name here"

[node name="HBoxContainer" type="HBoxContainer" parent="SaveMapPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveAsMapConfirmButton" type="Button" parent="SaveMapPopup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Save As"

[node name="SaveMapConfirmButton" type="Button" parent="SaveMapPopup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Save"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.15
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="MainMapDisplay" type="Panel" parent="HSplitContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="Panel" parent="HSplitContainer/MarginContainer/MainMapDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ktsdv")

[node name="SideMenu" type="VSplitContainer" parent="HSplitContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TerrainMenuWrapper" type="MarginContainer" parent="HSplitContainer/SideMenu"]
clip_contents = true
layout_mode = 2
size_flags_stretch_ratio = 0.57

[node name="MenuWrapper" type="VBoxContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper"]
layout_mode = 2

[node name="TerrainMenu" type="PanelContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper"]
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 3

[node name="TerrainLabel" type="Label" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_f76qc")
text = "Terrain"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu/MarginContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="PanelContainer" type="VBoxContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="MarbleTile_white" type="TextureRect" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu/MarginContainer/ScrollContainer/PanelContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
texture = SubResource("AtlasTexture_vtgug")
expand_mode = 1
stretch_mode = 5
script = ExtResource("5_m2pae")

[node name="MarbleTile_blck" type="TextureRect" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu/MarginContainer/ScrollContainer/PanelContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
texture = SubResource("AtlasTexture_5pobu")
expand_mode = 1
stretch_mode = 5
script = ExtResource("5_m2pae")

[node name="GrassTile" type="TextureRect" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu/MarginContainer/ScrollContainer/PanelContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
texture = SubResource("AtlasTexture_w23fb")
expand_mode = 1
stretch_mode = 5
script = ExtResource("5_m2pae")

[node name="Divider1" type="Panel" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
script = ExtResource("6_ua3h0")

[node name="TriggerMenu" type="PanelContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25

[node name="TriggerLabel" type="Label" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TriggerMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_f76qc")
text = "Triggers"

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TriggerMenu"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="TriggerList" type="VBoxContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TriggerMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Divider2" type="Panel" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
script = ExtResource("6_ua3h0")

[node name="EventsMenu" type="PanelContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_stretch_ratio = 1.25

[node name="EventsLabel" type="Label" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/EventsMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_f76qc")
text = "Events"

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/EventsMenu"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="EventsList" type="VBoxContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/EventsMenu/ScrollContainer"]
layout_mode = 2

[node name="PopUpMenu" type="PanelContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="Pop Up Menu" type="Label" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/PopUpMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_f76qc")
text = "Pop Up Menu"

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/PopUpMenu"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="PopUpList" type="VBoxContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/PopUpMenu/ScrollContainer"]
layout_mode = 2

[node name="ErrorPopup" type="PopupPanel" parent="."]
initial_position = 5

[node name="MarginContainer" type="MarginContainer" parent="ErrorPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ErrorPopup/MarginContainer"]
layout_mode = 2

[node name="ErrorMessage" type="Label" parent="ErrorPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="ErrorPopupOkButton" type="Button" parent="ErrorPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "OK"

[node name="MapMenuPanel" type="Control" parent="."]
z_index = 2
layout_mode = 1
anchor_left = 0.005
anchor_top = 0.936
anchor_right = 0.448
anchor_bottom = 0.993
offset_left = 0.599999
offset_top = 0.0799561
offset_right = 0.559998
offset_bottom = -1.96002

[node name="Panel" type="Panel" parent="MapMenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="MapMenuPanel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.009
anchor_top = 0.122
anchor_right = 0.99
anchor_bottom = 0.878
offset_left = -0.0390005
offset_top = -0.00200033
offset_right = -0.290039
offset_bottom = 0.0019989
grow_horizontal = 2
grow_vertical = 2

[node name="BackToMain" type="Button" parent="MapMenuPanel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_f76qc")
theme_override_font_sizes/font_size = 18
text = "Back to Main"

[node name="SaveMapButton" type="Button" parent="MapMenuPanel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_f76qc")
theme_override_font_sizes/font_size = 18
text = "Save Map"

[node name="SaveAsMapButton" type="Button" parent="MapMenuPanel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_f76qc")
theme_override_font_sizes/font_size = 18
text = "Save As"

[node name="LoadMapButton" type="Button" parent="MapMenuPanel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_f76qc")
theme_override_font_sizes/font_size = 18
text = "Load Map"

[node name="ToggleMapMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 586.0
offset_top = 679.0
offset_right = 673.0
offset_bottom = 706.0
theme_override_fonts/font = ExtResource("3_f76qc")
theme_override_font_sizes/font_size = 16
text = "Open Menu"

[connection signal="close_requested" from="SaveMapPopup" to="." method="_on_save_map_popup_close_requested"]
[connection signal="pressed" from="SaveMapPopup/MarginContainer/VBoxContainer/HBoxContainer/SaveAsMapConfirmButton" to="." method="_on_save_as_map_button_pressed"]
[connection signal="mouse_entered" from="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider1" to="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider1" to="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider2" to="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider2" to="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider2" method="_on_mouse_exited"]
[connection signal="pressed" from="ErrorPopup/MarginContainer/VBoxContainer/ErrorPopupOkButton" to="." method="_on_error_popup_ok_button_pressed"]
[connection signal="pressed" from="MapMenuPanel/Panel/VBoxContainer/BackToMain" to="." method="_on_back_to_main_pressed"]
[connection signal="pressed" from="MapMenuPanel/Panel/VBoxContainer/SaveMapButton" to="." method="_on_save_map_button_pressed"]
[connection signal="pressed" from="ToggleMapMenuButton" to="." method="_on_toggle_map_menu_button_pressed"]
